--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "mongodb": "^3.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
